# google-contacts-cisco

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.ai/planning/: 06-cisco-xml-requirements.md  README.md
.ai/planning/tasks/: 00-task-index.md  01-environment-setup.md  02-database-setup.md  03-configuration-management.md  04-oauth-implementation.md  05-google-api-client.md  06-contact-data-models.md  07-full-sync-implementation.md  08-incremental-sync-implementation.md  09-sync-service.md  10-xml-formatter-service.md  11-xml-directory-endpoints.md  12-phone-number-normalization.md  13-search-service-implementation.md  14-search-api-endpoints.md  15-frontend-framework-setup.md  16-oauth-setup-interface.md  17-contacts-with-integrated-search.md  18-search-integration-notes.md  19-sync-management-interface.md  20-unit-tests.md  21-integration-tests.md  22-end-to-end-tests.md  23-api-documentation.md  24-deployment-preparation.md  25-monitoring-logging.md
.ai/prompts/: code-review.md  task-execution.md
.at/planning/: 01-project-overview.md  02-requirements.md  03-architecture.md  04-technology-stack.md  05-implementation-plan.md  06-cisco-xml-requirements.md
.beads/: config.yaml  issues.jsonl
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 22dad42c8d24_add_email_addresses_table.py  3b6d750552da_initial_schema.py  f68f00bdffe0_add_display_name_validation.py
docs/: api.md  authentication.md  cisco-phone-setup.md  configuration.md  deployment.md  reverse-proxy-setup.md  setup.md  testing.md  troubleshooting.md
docs/postman/: README.md  collection.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: BaseLayout.vue  ContactCard.vue  ContactModal.vue
frontend/src/router/: index.ts
frontend/src/types/: api.ts  oauth.ts
frontend/src/views/: ContactsView.vue  HomeView.vue  NotFoundView.vue  OAuthSetupView.vue  SearchView.vue  SyncView.vue
google_contacts_cisco/: __init__.py  _version.py  config.py  config_utils.py  main.py
google_contacts_cisco/api/: __init__.py  contacts.py  directory_routes.py  google.py  routes.py  schemas.py  search.py  search_routes.py  sync.py
google_contacts_cisco/auth/: __init__.py  oauth.py
google_contacts_cisco/models/: __init__.py  contact.py  db_utils.py  email_address.py  phone_number.py  sync_state.py
google_contacts_cisco/repositories/: __init__.py  contact_repository.py  sync_repository.py
google_contacts_cisco/schemas/: __init__.py  contact.py
google_contacts_cisco/services/: __init__.py  contact_transformer.py  google_client.py  scheduler.py  search_service.py  sync_service.py  xml_formatter.py
google_contacts_cisco/utils/: __init__.py  datetime_utils.py  logger.py  phone_utils.py
scripts/: build.sh  coverage-report.sh  dev.sh  test.sh  verify-coverage.py
tests/: __init__.py  conftest.py  test_main.py  test_version.py
tests/integration/: README.md  __init__.py  conftest.py  test_concurrent_sync.py  test_database_transactions.py  test_oauth_flow.py  test_timezone_handling.py
tests/integration/api/: test_api_contacts.py  test_api_directory.py  test_api_search.py  test_api_sync.py
tests/integration/services/: __init__.py  test_service_integration.py  test_sync_memory_management.py
tests/unit/: test_config.py  test_config_utils.py  test_database.py  test_proxy_headers.py
tests/unit/api/: __init__.py  test_directory_routes.py  test_google.py  test_routes.py  test_schemas.py  test_search.py  test_search_routes.py  test_sync.py
tests/unit/auth/: __init__.py  test_oauth.py
tests/unit/repositories/: __init__.py  test_contact_repository.py  test_sync_repository.py
tests/unit/schemas/: __init__.py  test_contact.py
tests/unit/services/: __init__.py  test_contact_transformer.py  test_google_client.py  test_scheduler.py  test_search_service.py  test_sync_service.py  test_xml_formatter.py
tests/unit/utils/: __init__.py  test_datetime_utils.py  test_logger.py  test_phone_utils.py
